chore: global project of libraries, Java and Maven dependencies
- remove dependency from bv-opensource-super-pom parent POM
- upgrade versions of Maven plugins and external libraries
- upgrade to Java x21 features (record, redundant modifiers, lists operations, parameterized collections, lambda functions,
- optimize all imports
- switch from javax to jakarta

# Conflicts:
#	guice/pom.xml
#	jolt-core/src/main/java/com/bazaarvoice/jolt/common/tree/WalkedPath.java